# cookiecutter-trapi-predict-kit

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.package_name}}/: .dvcignore  .gitignore  CITATION.cff  Dockerfile  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: test.yml
{{cookiecutter.package_name}}/src/trapi/: main.py
{{cookiecutter.package_name}}/src/{{cookiecutter.module_name}}/: api.py  predict.py  train.py
{{cookiecutter.package_name}}/tests/: test_model.py
